--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     name: json_viewer
     env: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn app:app --bind=localhost:8000"
+    startCommand: "gunicorn app:app --bind=0.0.0.0:8000"
     envVars:
       - key: SECRET_KEY
         generateValue: true
@@ -13,3 +13,5 @@ services:
         value: 4
       - key: PYTHON_VERSION
         value: 3.9.17
+      - key: PORT
+        value: 8000
